--- a/src/scripts/components/chapter-navigation.scss
+++ b/src/scripts/components/chapter-navigation.scss
@@ -3,7 +3,7 @@
   box-shadow: 0.625em 0.625em 1.875em rgb(166 166 166 / 20%);
   display: flex;
   flex-direction: column;
-  width: 16rem;
+  max-width: 16rem;
 
   .h5peditor-portfolio-chapter-navigation-maintitle {
     background-color: #1768C4;
